<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_recipe_layout"
        android:layout_width="match_parent"
        android:background="?attr/colorOnPrimary"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/material_header"
            app:headlineText="@{@string/ingredients}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_ingredient_fab"
            style="@style/custom_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:contentDescription="@string/add_ingredient"
            android:src="@drawable/ic_baseline_add_24"
            app:tooltipTextCompat="@{@string/add_ingredient}"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/add_hint_text"
            style="@style/headline_3"
            android:layout_marginTop="50dp"
            android:paddingStart="@dimen/outline_horizontal"
            android:paddingEnd="100dp"
            android:text="@string/add_ingredients_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:visibility="gone" />

        <ListView
            android:id="@+id/ingredients_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:paddingTop="30dp"
            android:paddingBottom="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/add_ingredient_listitem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/secondary_button"
            android:layout_marginStart="@dimen/outline_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/primary_button"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/outline_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
