<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    background color is set by background round_corners-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ingredient_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:paddingBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_form_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/first_row_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ingredient_quantity_label"
                    style="@style/label"
                    android:labelFor="@id/ingredient_quantity_field"
                    android:text="@string/label_ingredient_quantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ingredient_quantity_field"
                    style="@style/edit_text"
                    android:layout_width="100dp"
                    android:digits="0123456789.,"
                    android:hint="@string/hint_ingredient_quantity"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredient_quantity_label" />

                <TextView
                    android:id="@+id/ingredient_unit_label"
                    style="@style/label"
                    android:labelFor="@id/ingredient_unit_spinner"
                    android:text="@string/label_ingredient_unit"
                    app:layout_constraintBottom_toTopOf="@id/ingredient_unit_spinner"
                    app:layout_constraintStart_toStartOf="@id/ingredient_unit_spinner" />

                <Spinner
                    android:id="@+id/ingredient_unit_spinner"
                    style="@style/spinner"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/default_space"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="@id/ingredient_quantity_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ingredient_quantity_field" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/ingredient_name_label"
                style="@style/label"
                android:layout_marginTop="@dimen/default_space"
                android:labelFor="@id/ingredient_name_field"
                android:text="@string/label_ingredient_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_row_wrapper" />

            <EditText
                android:id="@+id/ingredient_name_field"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:hint="@string/hint_ingredient_name"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLength="@integer/ingredient_name_max_length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredient_name_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/primary_button"
            android:layout_marginTop="@dimen/default_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredient_form_wrapper"
            tools:text="@string/add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/invisible_button"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
