<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="?attr/colorOnPrimary"
        android:layout_height="46dp"
        android:paddingHorizontal="@dimen/outline_horizontal">

        <TextView
            android:id="@+id/ingredient_text_view"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_wrapper"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="200g Kichererbsen aus dem Glas" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_wrapper"
            android:layout_width="80dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_baseline_edit_24"
                android:contentDescription="@string/edit_ingredient"
                app:tooltipTextCompat="@{@string/edit_ingredient}"
                app:backgroundTint="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_baseline_delete_24"
                android:contentDescription="@string/delete_ingredient"
                app:tooltipTextCompat="@{@string/delete_ingredient}"
                app:backgroundTint="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
