...
    <string name="category">Kategorie</string>
    <string name="new_recipe">Neues Rezept</string>
    <string name="desc_add_recipe">Rezept hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete_recipe_message">Rezept wirklich löschen?</string>
    <string name="ingredients">Zutaten</string>
    <string name="serving">Portion</string>
    <string name="servings">Portionen</string>
    <string name="recipe_image">Rezept-Bild</string>
    <string name="desc_cook_recipe">Rezept kochen</string>
    <string name="steps">Schritte</string>
    <string name="add_to_shopping_list">Zur Einkaufsliste hinzufügen</string>
...
    <string name="minute_sg">Minute</string>
    <string name="hour_sg">Stunde</string>
    <string name="hour_pl">Stunden</string>
    <string name="minute_pl">Minuten</string>
    <string name="label_recipe_servings">Portionen</string>
    <string name="hint_recipe_servings">z.B. 2</string>
    <string name="err_enter_name">Namen eingeben</string>
    <string name="err_enter_servings">Portionen angeben</string>
    <string name="err_servings_greater_than_zero">Wert größer als 0 angeben</string>
    <string name="err_enter_description">Beschreibung angeben</string>
    <string name="can_sg">Dose</string>
    <string name="can_pl">Dosen</string>
    <string name="glas_sg">Glas</string>
...
